# intellij-polyglot

./: .gitignore  README.md  intellij-polyglot.ipr  intellij-polyglot.iws  pyproject.toml  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/intellij/polyglot/: App.java
app/src/test/java/intellij/polyglot/: AppTest.java
poetry/demo/: hello.py
poetry/local/: greeter.py
