[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["SamTheisens <1911436+SamTheisens@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "==13.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "poetry.demo.hello:hello_world"